unpackaged/main/default/objects/Prior_Auth__c/Prior_Auth__c.object-meta.xml
<CustomObject>
    <label>Prior Auth</label>
    <nameField>
        <displayFormat>DPA-{0000000}</displayFormat>
        <label>Prior Auth Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prior Auth</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>