unpackaged/main/default/objects/Prior_Auth__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Number</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Prior Auth</relationshipLabel>
    <relationshipName>Prior_Auth</relationshipName>
    <type>Lookup</type>
</CustomField>