unpackaged/main/default/objects/Prior_Auth__c/fields/Authorized_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Relationship__c</fullName>
    <label>Authorized Relationship</label>
    <length>200</length>
    <type>Text</type>
</CustomField>