unpackaged/main/default/objects/Prior_Auth__c/fields/Billing_Provider_PIN__c.field-meta.xml
<CustomField>
    <fullName>Billing_Provider_PIN__c</fullName>
    <label>Billing Provider PIN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>