unpackaged/main/default/objects/Prior_Auth__c/fields/Billing_Provider_State__c.field-meta.xml
<CustomField>
    <fullName>Billing_Provider_State__c</fullName>
    <label>Billing Provider State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>