unpackaged/main/default/objects/Prior_Auth__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Prior Auth</relationshipLabel>
    <relationshipName>Prior_Auth</relationshipName>
    <type>Lookup</type>
</CustomField>