unpackaged/main/default/objects/Prior_Auth__c/fields/Claim_Information__c.field-meta.xml
<CustomField>
    <fullName>Claim_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Claim Information</label>
    <referenceTo>Claim_Information__c</referenceTo>
    <relationshipLabel>Prior Auth</relationshipLabel>
    <relationshipName>Prior_Auth</relationshipName>
    <type>Lookup</type>
</CustomField>