unpackaged/main/default/objects/Prior_Auth__c/fields/Control_Number__c.field-meta.xml
<CustomField>
    <fullName>Control_Number__c</fullName>
    <label>Control Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>