unpackaged/main/default/objects/Prior_Auth__c/fields/Copay_Amount__c.field-meta.xml
<CustomField>
    <fullName>Copay_Amount__c</fullName>
    <label>Copay Amount</label>
    <length>18</length>
    <type>Text</type>
</CustomField>