unpackaged/main/default/objects/Prior_Auth__c/fields/CSA_Control__c.field-meta.xml
<CustomField>
    <fullName>CSA_Control__c</fullName>
    <label>CSA Control</label>
    <length>255</length>
    <type>Text</type>
</CustomField>