unpackaged/main/default/objects/Prior_Auth__c/fields/Diagnosis_Code__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis_Code__c</fullName>
    <label>Diagnosis Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>