unpackaged/main/default/objects/Prior_Auth__c/fields/Drug__c.field-meta.xml
<CustomField>
    <fullName>Drug__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp; Contact_Drug__r.Drug_Name__c, Drug_Label_Name__c,&quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Drug</label>
    <type>Text</type>
</CustomField>