unpackaged/main/default/objects/Prior_Auth__c/fields/Drug_Label_Name__c.field-meta.xml
<CustomField>
    <fullName>Drug_Label_Name__c</fullName>
    <label>Drug Label Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>