unpackaged/main/default/objects/Prior_Auth__c/fields/Error_Log__c.field-meta.xml
<CustomField>
    <fullName>Error_Log__c</fullName>
    <label>Error Log</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HCPCS Mismatch</fullName>
            </value>
            <value>
                <fullName>CSA Mismatch</fullName>
            </value>
            <value>
                <fullName>Unable to create record due to duplicate.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>