unpackaged/main/default/objects/Prior_Auth__c/fields/HCPCS_Code__c.field-meta.xml
<CustomField>
    <fullName>HCPCS_Code__c</fullName>
    <label>HCPCS Code</label>
    <length>200</length>
    <type>Text</type>
</CustomField>