unpackaged/main/default/objects/Prior_Auth__c/fields/NDC__c.field-meta.xml
<CustomField>
    <fullName>NDC__c</fullName>
    <label>NDC</label>
    <length>200</length>
    <type>Text</type>
</CustomField>