unpackaged/main/default/objects/Prior_Auth__c/fields/Patient_Middle_Initial__c.field-meta.xml
<CustomField>
    <fullName>Patient_Middle_Initial__c</fullName>
    <label>Patient Middle Initial</label>
    <length>200</length>
    <type>Text</type>
</CustomField>