unpackaged/main/default/objects/Prior_Auth__c/fields/Patient_Name__c.field-meta.xml
<CustomField>
    <fullName>Patient_Name__c</fullName>
    <formula>Patient_First_Name__c + &#39; &#39; + Patient_Middle_Initial__c + &#39; &#39; + Patient_Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Name</label>
    <type>Text</type>
</CustomField>