unpackaged/main/default/objects/Prior_Auth__c/fields/Patient_State__c.field-meta.xml
<CustomField>
    <fullName>Patient_State__c</fullName>
    <label>Patient State</label>
    <length>25</length>
    <type>Text</type>
</CustomField>