unpackaged/main/default/objects/Prior_Auth__c/fields/Plan_Sponsor_Name__c.field-meta.xml
<CustomField>
    <fullName>Plan_Sponsor_Name__c</fullName>
    <label>Policy Sponsor Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>