unpackaged/main/default/objects/Prior_Auth__c/fields/Policy_Holder_Name__c.field-meta.xml
<CustomField>
    <fullName>Policy_Holder_Name__c</fullName>
    <label>Policy Holder Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>