unpackaged/main/default/objects/Prior_Auth__c/fields/Prescriber_Address_Line2__c.field-meta.xml
<CustomField>
    <fullName>Prescriber_Address_Line2__c</fullName>
    <label>Prescriber Address Line2</label>
    <type>TextArea</type>
</CustomField>