unpackaged/main/default/objects/Prior_Auth__c/fields/Prescriber_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Prescriber_Address_Line_1__c</fullName>
    <label>Prescriber Address Line 1</label>
    <length>80</length>
    <type>Text</type>
</CustomField>