unpackaged/main/default/objects/Prior_Auth__c/fields/Prescriber_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Prescriber_First_Name__c</fullName>
    <label>Prescriber First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>