unpackaged/main/default/objects/Prior_Auth__c/fields/Prescriber_Specialty__c.field-meta.xml
<CustomField>
    <fullName>Prescriber_Specialty__c</fullName>
    <label>Prescriber Specialty</label>
    <length>200</length>
    <type>Text</type>
</CustomField>