unpackaged/main/default/objects/Prior_Auth__c/fields/Prescriber_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Prescriber_Zip_Code__c</fullName>
    <label>Prescriber Zip</label>
    <length>18</length>
    <type>Text</type>
</CustomField>