unpackaged/main/default/objects/Prior_Auth__c/fields/Prudent_In_Data_Staging_ID__c.field-meta.xml
<CustomField>
    <fullName>Prudent_In_Data_Staging_ID__c</fullName>
    <label>Prudent In Data Staging ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>