unpackaged/main/default/objects/Prior_Auth__c/fields/Service_Provider_City__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider_City__c</fullName>
    <label>Service Provider City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>