unpackaged/main/default/objects/Prior_Auth__c/fields/Service_Provider_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider_Last_Name__c</fullName>
    <label>Service Provider Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>