unpackaged/main/default/objects/Prior_Auth__c/fields/Service_Provider_State__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider_State__c</fullName>
    <label>Service Provider State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>