unpackaged/main/default/objects/Prior_Auth__c/fields/Service_Provider_Zip__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider_Zip__c</fullName>
    <label>Service Provider Zip</label>
    <length>18</length>
    <type>Text</type>
</CustomField>