unpackaged/main/default/objects/Prior_Auth__c/fields/Servicing_Provider_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Servicing_Provider_First_Name__c</fullName>
    <label>Servicing Provider First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>