unpackaged/main/default/objects/Prior_Auth__c/fields/Servicing_Provider_National_Provider_Ide__c.field-meta.xml
<CustomField>
    <fullName>Servicing_Provider_National_Provider_Ide__c</fullName>
    <label>Servicing Provider National Provider Ide</label>
    <length>50</length>
    <type>Text</type>
</CustomField>