unpackaged/main/default/objects/Prior_Auth__c/fields/Servicing_Provider_Practice_Role_Name__c.field-meta.xml
<CustomField>
    <fullName>Servicing_Provider_Practice_Role_Name__c</fullName>
    <label>Servicing Provider Practice Role Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>