unpackaged/main/default/objects/Prior_Auth__c/fields/Servicing_Provider_Specialty_Code__c.field-meta.xml
<CustomField>
    <fullName>Servicing_Provider_Specialty_Code__c</fullName>
    <label>Servicing Provider Specialty Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>