unpackaged/main/default/objects/Prior_Auth__c/fields/Subscriber_State_Code__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_State_Code__c</fullName>
    <label>Subscriber State Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>