unpackaged/main/default/objects/Prior_Auth__c/fields/Subscriber_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_Zip_Code__c</fullName>
    <label>Subscriber Zip Code</label>
    <length>18</length>
    <type>Text</type>
</CustomField>