unpackaged/main/default/objects/Prior_Auth__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Error_Log__c</columns>
    <columns>Status__c</columns>
    <columns>CSA_Account__c</columns>
    <columns>Patient_CUMB_ID__c</columns>
    <columns>Prior_Authorization__c</columns>
    <columns>Contact_Drug__c</columns>
    <columns>Case__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>